--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -16,11 +16,11 @@
 
 
   <div class="filter-item filter-patients">
-    <app-filter-patient-id [patients]="patientSummary.patientIDs" endpoint="patient"></app-filter-patient-id>
+    <app-filter-patient-id [all_patients]="all_patients" [patients]="patientSummary.patientIDs" endpoint="patient"></app-filter-patient-id>
   </div>
 
   <div class="filter-item filter-patient-types">
-    <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [total_cohorts]="total_cohorts" [total_outcomes]="total_outcomes" endpoint="patient"></app-filter-patient-type>
+    <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [all_cohorts]="all_cohorts" [all_outcomes]="all_outcomes" endpoint="patient"></app-filter-patient-type>
   </div>
 
   <div class="filter-item filter-elisas">
@@ -28,7 +28,7 @@
   </div>
 
   <div class="filter-item filter-dates">
-    <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="total_years" endpoint="patient"></app-filter-sample-year>
+    <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year>
   </div>
 
   <div class="filter-item filter-expts">
@@ -36,6 +36,6 @@
   </div>
 
   <div class="filter-item filter-ctry">
-    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="total_countries"></app-filter-location>
+    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location>
   </div>
 </div>
