add file upload / PUT

--- a/sample-viewer/src/app/add-samples/add-samples.component.html
+++ b/sample-viewer/src/app/add-samples/add-samples.component.html
@@ -1,3 +1,7 @@
+<div class="upload-file">
+  <app-sample-upload></app-sample-upload>
+</div>
+
 <mat-horizontal-stepper linear="true" #stepper>
 
   <mat-step [stepControl]="patientsFormGroup">
