remove stepper, fix file reset

--- a/sample-viewer/src/app/add-samples/add-samples.component.html
+++ b/sample-viewer/src/app/add-samples/add-samples.component.html
@@ -2,4 +2,4 @@
   <app-sample-upload></app-sample-upload>
 </div>
 
-<app-add-stepper></app-add-stepper>
+<!-- <app-add-stepper></app-add-stepper> -->
