--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -2,3 +2,21 @@
 <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload sample list</button>
 <!-- Actual workhorse to upload the data on the client side -->
 <input  hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
+
+<div class="client-responses">
+  <h1 *ngIf="uploadResponse">{{ uploadResponse }}</h1>
+
+  <h3 *ngIf="errorMsg">{{ errorMsg }}</h3>
+
+</div>
+
+
+<div *ngIf="! user.write">
+  <p>
+    You're not allowed to upload sample data to the database.
+  </p>
+
+  <p>
+    Please contact Laura if you think this is an error.
+  </p>
+</div>
