--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -14,7 +14,7 @@
         Error: {{ msg. key }}
       </div>
       <div>
-        IDs: {{ msg.ids }}
+        IDs: {{ msg.value.ids }}
       </div>
     </div>
   </div>
