switch variable name

--- a/sample-viewer/src/app/_dialogs/sample-metadata/sample-metadata.component.html
+++ b/sample-viewer/src/app/_dialogs/sample-metadata/sample-metadata.component.html
@@ -1,4 +1,4 @@
-<h4>Metadata for {{data['sample_id']}}</h4>
+<h4>Metadata for {{data['sampleID']}}</h4>
 
 <div *ngFor="let key of sample_vars" class="metadata-pair">
   <div class="metadata-key">
