temp: adding delete all button (!)

--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -36,6 +36,9 @@
 
 </div>
 
+<!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
+<button type="button" mat-raised-button color="alert" (click)="deletePatients()">Clear patient list</button>
+
 
 <div *ngIf="! user.write">
   <p>
