add patient symptoms

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -27,6 +27,9 @@
     <app-patient-samples [patient]="patient"></app-patient-samples>
 
     <app-patient-demographics [patient]="patient"></app-patient-demographics>
+
+    <app-patient-symptoms [patient]="patient"></app-patient-symptoms>
+
     <app-patient-related [patient]="patient"></app-patient-related>
 
     <div class="patient-data">
