fix updating on data change

--- a/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.scss
@@ -12,11 +12,13 @@
 
 .symptom-false {
   & .fas {
-    color: accent(50);
+    // color: accent(50);
+    color: white;
   }
 
   & .far {
-    color: accent(200);
+    // color: accent(200);
+    color: $grey-200;
   }
 }
 
