Add in ELISA data

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -28,6 +28,8 @@
 
     <app-patient-demographics [patient]="patient"></app-patient-demographics>
 
+    <app-patient-elisas [patient]="patient"></app-patient-elisas>
+
     <app-patient-symptoms [patient]="patient"></app-patient-symptoms>
 
     <app-patient-related [patient]="patient"></app-patient-related>
