add in default = NA

--- a/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
+++ b/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
@@ -32,6 +32,9 @@
               <div *ngSwitchCase="'unknown'">
                 <mat-icon>help_outline</mat-icon>
               </div>
+              <div *ngSwitchDefault>
+                N/A
+              </div>
             </div>
           </div>
 
