--- a/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.html
+++ b/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.html
@@ -25,6 +25,10 @@
             <i class="far fa-check-circle fa-stack-1x"></i>
           </span>
 
+          <span class="symptom-unavailable" *ngIf="!timepoint.symptoms[symptom] && timepoint.symptoms[symptom] !== false">
+          N/A
+        </span>
+
         </td>
       </tr>
     </table>
