--- a/sample-viewer/src/app/patient-page/patient-relationships/patient-relationships.component.html
+++ b/sample-viewer/src/app/patient-page/patient-relationships/patient-relationships.component.html
@@ -2,12 +2,12 @@
   <h4 class="patient" id="related-patients">Relationship to Survivor</h4>
   <div class="how-related">
     <span class="variable-field">relationship to survivor: </span>
-    <span class="variable-value">{{ patient.contactSurvivorRelationship }}</span>
+    <span class="variable-value">{{ patient.contactSurvivorRelationship ? patient.contactSurvivorRelationship : "unknown" }}</span>
   </div>
 
   <div class="how-exposed">
     <span class="variable-field">exposure type: </span>
-    <span class="variable-value">{{ patient.exposureType }}</span>
+    <span class="variable-value">{{ patient.exposureType ? patient.exposureType : "unknown" }}</span>
   </div>
 
 </div>
