--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
@@ -1,6 +1,9 @@
 <div class="filter filter-expts">
   <h4 class="filter-label">ELISA result</h4>
 
+<p>
+  Ebola
+</p>
   <table>
     <tr>
       <th>
