change css virus title

--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
@@ -1,10 +1,17 @@
 <div class="filter filter-expts">
   <h4 class="filter-label">ELISA result</h4>
 
-<p>
-  Ebola
-</p>
+
   <table>
+    <tr>
+      <th>
+
+      </th>
+      <th [colspan]="elisa_results.length" class="virus-name">
+        Ebola
+      </th>
+    </tr>
+
     <tr>
       <th>
 
