--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
@@ -7,7 +7,7 @@
       <th>
 
       </th>
-      <th [colspan]="elisa_results.length" class="virus-name">
+      <th [attr.colspan]="elisa_results.length" class="virus-name">
         Ebola
       </th>
     </tr>
