add temp delete btn

--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -1,32 +1,54 @@
-<!-- Dummy for styling -->
-<button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload sample list</button>
-<!-- Actual workhorse to upload the data on the client side -->
-<input  hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
+<div class="upload-button">
+  <!-- <div class="upload-button" *ngIf="user.write"> -->
+  <!-- Dummy for styling -->
+  <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload sample list</button>
+  <!-- Actual workhorse to upload the data on the client side -->
+  <input hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
 
-<div class="client-responses">
-  <h1 *ngIf="uploadResponse">{{ uploadResponse }}</h1>
 
-  <h3 *ngIf="errorMsg">{{ errorMsg }}</h3>
+  <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
+  <div>
+    <button type="button" mat-raised-button color="warn" (click)="deleteSamples()">Clear sample list</button>
+  </div>
 
-  <div class="error-messages" *ngIf="errorObj">
-    <div class="error-message-group" *ngFor="let msg of errorObj">
-      <div class="error-message">
-        <span class="error-label">
-          Error:
-        </span>
-        {{ msg. key }}
-      </div>
-      <div class="error-ids">
-        <span class="error-label">
-          IDs:
-        </span>
-        {{ msg.value.ids }}
+
+
+  <!-- <div class="client-responses">
+    <h1 *ngIf="uploadResponse">{{ uploadResponse }}</h1>
+
+    <h3 *ngIf="errorMsg">{{ errorMsg }}</h3>
+
+    <div class="error-messages" *ngIf="errorObj">
+      <div class="error-message-group" *ngFor="let msg of errorObj">
+        <div class="error-message">
+          <span class="error-label">
+        Error:
+      </span> {{ msg. key }}
+        </div>
+        <div class="error-ids">
+          <span class="error-label">
+        IDs:
+      </span>
+          <div *ngFor="let id of msg.value.ids; let index">
+            {{ id }}
+            <span *ngIf="index < msg.value.ids.length" class="id-separator">
+      </span>
+          </div>
+
+        </div>
       </div>
     </div>
+
   </div>
+
+  <app-frontend-sample-validation [dataLength]="dataLength" [badIDs]="badIDs" [missingReq]="missingReq" [dateCheck]="dateDict"></app-frontend-sample-validation> -->
+
+  <!-- <app-preview-samples [data]="previewData" *ngIf="previewData"></app-preview-samples> -->
+
 
 </div>
 
+<app-upload-differences></app-upload-differences>
 
 <div *ngIf="! user.write">
   <p>
