--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -37,7 +37,7 @@
 </div>
 
 <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
-<button type="button" mat-raised-button color="alert" (click)="deletePatients()">Clear patient list</button>
+<button type="button" mat-raised-button color="warn" (click)="deletePatients()">Clear patient list</button>
 
 
 <div *ngIf="! user.write">
