--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.scss
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.scss
@@ -1,3 +1,13 @@
+// --- Errors ---
+
 .error-label {
   font-weight: 400;
+}
+
+/* • separator */
+.id-separator:after {
+  content: "\2022";
+  color: #959faa;
+  padding-left: 3px;
+  padding-right: 3px;
 }
