--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -48,7 +48,7 @@
 
 </div>
 
-<app-upload-differences></app-upload-differences>
+<!-- <app-upload-differences></app-upload-differences> -->
 
 <div *ngIf="! user.write">
   <p>
